<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jk.practice.movies.viewmodels.moviedetail.MovieDetailViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/movieDetail_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        tools:context=".ui.moviedetail.MovieDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_detail_app_bar_height"
            android:animateLayoutChanges="true"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/movieDetail_collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/MoviesDetailToolbarText"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorPrimary"
                app:title="@{viewModel.movie.originalTitle}"
                app:toolbarId="@id/movieDetailToolbar">

                <ImageView
                    android:id="@+id/detail_image"
                    imageUrl="@{viewModel.movie.definitiveBackdropPath}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_detail_app_bar_height"
                    android:contentDescription="@string/movieContentDescription"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    android:transitionName="imageMovie"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/shape_gradientv_whitetransparent"></View>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/movieDetailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_detail_back"
                    app:titleTextColor="?attr/colorOnSurface" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/movieDetail_nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/padding_M"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/mm">

                <TextView
                    android:id="@+id/movieDetail_textViewDescription"
                    style="@style/ww"
                    android:layout_marginLeft="@dimen/margin_M"
                    android:layout_marginTop="@dimen/margin_M"
                    android:text="@string/movieDetail_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movieDetail_textViewDescriptionValue"
                    style="@style/mw"
                    android:layout_marginStart="@dimen/margin_M"
                    android:layout_marginTop="@dimen/margin_S"
                    android:layout_marginEnd="@dimen/margin_M"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@{viewModel.movie.overview}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movieDetail_textViewDescription"
                    tools:text="@string/lorem_words_50" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movieDetail_constraintLanguageAndBudge"
                    style="@style/mw"
                    android:layout_marginTop="@dimen/margin_S"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movieDetail_textViewDescriptionValue">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineCenter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <TextView
                        android:id="@+id/movieDetail_textViewAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_M"
                        android:drawableLeft="@drawable/ic_trending_up_black_18dp"
                        android:drawablePadding="@dimen/padding_XS"
                        android:drawableTint="@color/primaryDarkColor"
                        android:text="@string/movieDetail_qualify"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/primaryDarkColor"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movieDetail_textViewAverageValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_S"
                        android:text="@{viewModel.movie.average}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintEnd_toStartOf="@+id/movieDetail_textViewAverageValue2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movieDetail_textViewAverage"
                        tools:text="6.7" />

                    <TextView
                        android:id="@+id/movieDetail_textViewAverageValue2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/ 10"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        app:layout_constraintBaseline_toBaselineOf="@+id/movieDetail_textViewAverageValue"
                        app:layout_constraintEnd_toStartOf="@+id/movieDetail_textViewVotes"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/movieDetail_textViewAverageValue" />

                    <TextView
                        android:id="@+id/movieDetail_textViewVotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/movieDetail_voteCount(viewModel.movie.voteCountString)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintBaseline_toBaselineOf="@+id/movieDetail_textViewAverageValue2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/movieDetail_textViewAverageValue2" />

                    <TextView
                        android:id="@+id/movieDetail_textViewBudge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_M"
                        android:drawableLeft="@drawable/ic_attach_money_black_18dp"
                        android:drawablePadding="@dimen/padding_XS"
                        android:drawableTint="@color/primaryDarkColor"
                        android:text="@string/movieDetail_budget"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/primaryDarkColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movieDetail_textViewBudgeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.movie.budgetString}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/movieDetail_textViewVotes"
                        app:layout_constraintEnd_toEndOf="@id/movieDetail_textViewBudge"
                        app:layout_constraintStart_toStartOf="@id/movieDetail_textViewBudge"
                        tools:text="$12.000.000" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movieDetail_constraintGenres"
                    style="@style/mw"
                    android:layout_marginTop="@dimen/margin_M"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movieDetail_constraintLanguageAndBudge">

                    <TextView
                        android:id="@+id/moviDetail_textViewGenres"
                        style="@style/ww"
                        android:layout_marginStart="@dimen/margin_M"
                        android:text="@string/movieDetail_genres"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movieDetail_recyclerGenres"
                        style="@style/mw"
                        android:layout_marginStart="@dimen/margin_M"
                        android:layout_marginTop="@dimen/margin_XS"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/moviDetail_textViewGenres"
                        tools:listitem="@layout/recycler_item_genre" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movieDetail_constraintLanguages"
                    style="@style/mw"
                    android:layout_marginTop="@dimen/margin_M"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movieDetail_constraintGenres">

                    <TextView
                        android:id="@+id/moviDetail_textViewLanguages"
                        style="@style/ww"
                        android:layout_marginStart="@dimen/margin_M"
                        android:text="@string/movieDetail_language"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movieDetail_recyclerLanguages"
                        style="@style/mw"
                        android:layout_marginStart="@dimen/margin_M"
                        android:layout_marginTop="@dimen/margin_XS"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/moviDetail_textViewLanguages"
                        tools:listitem="@layout/recycler_item_spokenlanguage" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movieDetail_constraintCompanies"
                    style="@style/mw"
                    android:layout_marginTop="@dimen/margin_M"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movieDetail_constraintLanguages">

                    <TextView
                        android:id="@+id/moviDetail_textViewCompanies"
                        style="@style/ww"
                        android:layout_marginStart="@dimen/margin_M"
                        android:text="@string/movieDetail_productionCompanies"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movieDetail_recyclerCompanies"
                        style="@style/mw"
                        android:layout_marginStart="@dimen/margin_M"
                        android:layout_marginTop="@dimen/margin_M"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/moviDetail_textViewCompanies"
                        tools:listitem="@layout/recycler_item_productioncompany" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

